[project]
name = "jj-jwt-token-factory"
version = "0.0.1"
description = "JWT Token Factory"
readme = "README.md"
authors = [
    { name = "ihor", email = "Ihor.Halaniuk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.1",
    "pyjwt>=2.10.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
